After Client Review Push

--- a/Mortgage Renewal Struggles.html
+++ b/Mortgage Renewal Struggles.html
@@ -104,7 +104,7 @@
 <div class="mortgage-box bg-light-blue" id="intro-mortgage">
     <h2 class="mortgage-header">Canadian Homeowners Face Rising Mortgage Challenges: Preparing for a Mortgage Renewal</h2>
     <p class="mortgage-text">As economic conditions tighten, Canadian lenders and financial experts are voicing concerns about homeowners struggling to keep up with rising mortgage costs. Nearly 30% of new mortgage holders allocate around 25% of their income to mortgage payments alone. Since February 2022, 30% of homeowners have seen increased payments. With renewals looming, most Canadians can expect higher payments through 2025, creating a “perfect storm” of rising rates, increasing costs, and declining home values.</p>
-    <img src="assests/About Us 1.svg" alt="Canadian Mortgage Challenges" class="mortgage-image">
+    <img src="assests/Why Sell/Mortgage Renewal 1.svg" alt="Canadian Mortgage Challenges" class="mortgage-image">
 </div>
 
 <!-- Evaluating Options Section -->
@@ -132,7 +132,7 @@
 <div class="mortgage-box bg-light-gray" id="preparing-renewal-timeline">
     <h2 class="mortgage-header">Preparing for Your Mortgage Renewal Timeline</h2>
     <p class="mortgage-text">Mortgage renewal prep begins on the day you secure your mortgage, and it’s critical to act early. If your payment history includes missed or late payments, your lender might not renew, especially with rising payments. Canadian lenders are required to notify you 21 days before the renewal date if they don’t intend to renew, so it’s wise to plan well in advance.</p>
-    <img src="assests/About Us 2.svg" alt="Preparing for Renewal" class="mortgage-image">
+    <img src="assests/Why Sell/Mortgage Renewal 2.svg" alt="Preparing for Renewal" class="mortgage-image">
 </div>
 
 <!-- Selling with a Pending Renewal Section -->
@@ -146,7 +146,7 @@
 <div class="mortgage-box bg-light-yellow" id="steps-for-success">
     <h2 class="mortgage-header">Staying Prepared: Proactive Steps for Success</h2>
     <p class="mortgage-text">In a challenging market, proactive planning is key. Understand your mortgage terms, work with professionals, and monitor the market closely to make informed choices. Assess your renewal options early and seek guidance to secure your financial future with minimal disruption.</p>
-    <img src="assests/About Us 2.svg" alt="Proactive Planning" class="mortgage-image">
+    <img src="assests/Why Sell/Mortgage Renewal 3.svg" alt="Proactive Planning" class="mortgage-image">
 </div>
 
 
@@ -199,9 +199,9 @@
             </div>
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+                <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
         </div>
@@ -232,9 +232,9 @@
         <div class="footer-contact">
             <h3>Contact Us</h3>
             <ul>
-                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+                <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
             </ul>
         </div>
     </div>
