--- a/Unfinished Construction.html
+++ b/Unfinished Construction.html
@@ -104,7 +104,7 @@
 
     <!-- Introduction Card -->
     <div class="grid-card bg-blue" id="card-intro">
-        <img src="assests/About Us 1.svg" alt="Unfinished Home" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 1.svg" alt="Unfinished Home" class="grid-image">
         <h2 class="grid-title">Selling an Unfinished Home: Strategies for Success</h2>
         <p class="grid-text">Selling a home is challenging, and an unfinished property can add complexity. However, modern technology provides resources to make unfinished homes more appealing and increase their chances of selling.</p>
         <div class="grid-overlay">Use strategies to make an unfinished home stand out in the market.</div>
@@ -112,7 +112,7 @@
 
     <!-- Challenges Card -->
     <div class="grid-card bg-gray" id="card-challenges">
-        <img src="assests/About Us 1.svg" alt="Challenges of Unfinished Homes" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 2.svg" alt="Challenges of Unfinished Homes" class="grid-image">
         <h2 class="grid-title">Challenges of Selling an Unfinished Home</h2>
         <p class="grid-text">Buyers may be wary of unfinished homes due to completion costs and effort. Sellers must disclose known issues, including incomplete construction and potential expenses, making transparency essential.</p>
         <div class="grid-overlay">Transparency about the unfinished state builds buyer confidence.</div>
@@ -120,7 +120,7 @@
 
     <!-- Realtor Card -->
     <div class="grid-card bg-green" id="card-realtor">
-        <img src="assests/About Us 1.svg" alt="Experienced Realtor" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 3.svg" alt="Experienced Realtor" class="grid-image">
         <h2 class="grid-title">Working with an Experienced Realtor</h2>
         <p class="grid-text">The right realtor can make a big difference in selling an unfinished property. Look for agents experienced in this area who know how to market and present unfinished properties effectively.</p>
         <div class="grid-overlay">Choose a realtor who understands unique selling points for unfinished homes.</div>
@@ -128,7 +128,7 @@
 
     <!-- Visual Projections Card -->
     <div class="grid-card bg-yellow" id="card-visual-projections">
-        <img src="assests/About Us 1.svg" alt="Visual Projections for Homes" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 4.svg" alt="Visual Projections for Homes" class="grid-image">
         <h2 class="grid-title">Using Visual Projections</h2>
         <p class="grid-text">Visual tools like 3D tours and renderings help buyers visualize an unfinished home’s potential. Virtual tours can highlight layouts, finishes, and aesthetics of the finished property.</p>
         <div class="grid-overlay">Virtual renderings help buyers envision the final product.</div>
@@ -136,7 +136,7 @@
 
     <!-- Online Marketing Card -->
     <div class="grid-card bg-blue" id="card-online-marketing">
-        <img src="assests/About Us 1.svg" alt="Online Marketing" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 5.svg" alt="Online Marketing" class="grid-image">
         <h2 class="grid-title">Leveraging Online Marketing</h2>
         <p class="grid-text">Online platforms, particularly social media, are essential for marketing unfinished homes. High-quality images, 3D renderings, and targeted ads can reach a larger audience and spark interest.</p>
         <div class="grid-overlay">Social media provides wide exposure and engagement for listings.</div>
@@ -144,7 +144,7 @@
 
     <!-- Other Marketing Tactics Card -->
     <div class="grid-card bg-gray" id="card-other-marketing">
-        <img src="assests/About Us 1.svg" alt="Additional Marketing Strategies" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 6.svg" alt="Additional Marketing Strategies" class="grid-image">
         <h2 class="grid-title">Other Marketing Tactics</h2>
         <p class="grid-text">In addition to online marketing, consider hosting open houses or showings with refreshments. If some areas can be staged, use furniture to make the space feel inviting.</p>
         <div class="grid-overlay">Engage buyers with immersive, in-person experiences.</div>
@@ -152,7 +152,7 @@
 
     <!-- Customization Opportunity Card -->
     <div class="grid-card bg-green" id="card-opportunity">
-        <img src="assests/About Us 1.svg" alt="Opportunity for Customization" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 7.svg" alt="Opportunity for Customization" class="grid-image">
         <h2 class="grid-title">Presenting Customization Opportunities</h2>
         <p class="grid-text">Present the unfinished state as an opportunity for buyers to customize finishes and layouts to their taste. Highlight the creative freedom in finishing the home to their vision.</p>
         <div class="grid-overlay">Customization options increase buyer appeal.</div>
@@ -160,7 +160,7 @@
 
     <!-- Permits Card -->
     <div class="grid-card bg-yellow" id="card-permits">
-        <img src="assests/About Us 1.svg" alt="Permits for Unfinished Homes" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 8.svg" alt="Permits for Unfinished Homes" class="grid-image">
         <h2 class="grid-title">Ensuring Permits are in Place</h2>
         <p class="grid-text">Permits ensure that work meets safety standards and is up to code. Unpermitted work can deter buyers and lead to legal challenges. An experienced realtor can navigate these issues.</p>
         <div class="grid-overlay">Permits provide safety and compliance assurance to buyers.</div>
@@ -168,7 +168,7 @@
 
     <!-- Conclusion Card -->
     <div class="grid-card bg-blue" id="card-conclusion">
-        <img src="assests/About Us 1.svg" alt="Conclusion for Selling" class="grid-image">
+        <img src="assests/Why Sell/Unfinished Construction 9.svg" alt="Conclusion for Selling" class="grid-image">
         <h2 class="grid-title">Turning Challenges into Opportunities</h2>
         <p class="grid-text">An unfinished home offers buyers a chance to create their dream space. With strategic marketing and the right guidance, you can transform challenges into a unique opportunity for customization.</p>
         <div class="grid-overlay">A tailored approach helps make unfinished homes appealing to buyers.</div>
@@ -218,9 +218,9 @@
             </div>
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+                <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
         </div>
@@ -251,9 +251,9 @@
         <div class="footer-contact">
             <h3>Contact Us</h3>
             <ul>
-                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+                <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
             </ul>
         </div>
     </div>
