--- a/divorce and seperation.html
+++ b/divorce and seperation.html
@@ -118,7 +118,7 @@
       </div>
       <div class="divorce-row">
         <div class="divorce-content-full">
-          <h2>Open Communication and Professional Guidance</h2>
+          <h2>`Communication and Professional Guidance</h2>
           <p>
             Selling a home during a divorce requires open, transparent communication between both parties. It’s crucial to clearly express your needs, concerns, and goals throughout the process. Involving a neutral third party like a mediator or counselor can help manage emotions and facilitate constructive dialogue.
           </p>
@@ -130,7 +130,7 @@
   
       <div class="divorce-row">
         <div class="divorce-image-left">
-          <img src="assests/Why Sell/Selling Home During Divorce.svg" alt="Image representing legal guidance">
+          <img src="assests/Why Sell/Selling Home During Divorce 2.svg" alt="Image representing legal guidance">
         </div>
         <div class="divorce-content-right">
           <h2>Understanding Legal Implications</h2>
@@ -276,9 +276,9 @@
           </div>
           <div class="footer-social-icons">
               <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-              <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+              <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
               <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-              <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+              <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
           </div>
           
       </div>
@@ -309,9 +309,9 @@
       <div class="footer-contact">
           <h3>Contact Us</h3>
           <ul>
-              <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-              <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-              <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+              <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+              <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+              <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
           </ul>
       </div>
   </div>
