--- a/Apartment Blocks.html
+++ b/Apartment Blocks.html
@@ -134,7 +134,7 @@
                 
                     <input type="text" class="form-control" id="address" placeholder="Address" required>
                     <input type="text" class="form-control" id="name" placeholder="Name" required>
-                    <input type="number" class="form-control" id="phone" placeholder="Phone" required>
+                    <input type="tel" pattern="^[1-9]\d*$" class="form-control" id="phone" placeholder="Phone" required oninput="this.value = this.value.replace(/[^0-9]/g, '')">
                     <input type="email" class="form-control" id="email" placeholder="Email" required>
                     <div class="form-check">
                         <input type="checkbox" id="terms" class="form-check-input" required>
@@ -166,7 +166,7 @@
                 Apartment buildings were once the hottest investment in commercial real estate, with eager investors turning cash flow into thriving multifamily empires. However, the market has shifted dramatically in recent years. The impacts of the global pandemic, coupled with rising interest rates and inflation, have caused many investors to reconsider apartment ownership.
             </p>
             <p class="apartment-paragraph">
-                If you’re facing 2025 with an apartment building that feels more like a financial drain than an asset, GIGI Buys Homes can offer a streamlined, transparent solution. Our team helps owners move on from complex and costly apartment properties, freeing you up to explore new investment opportunities.
+                If you’re dealing with an apartment building that feels more like a financial drain than an asset, GIGI Buys Homes offers a streamlined and transparent solution. Our team helps owners transition from complex and costly apartment properties, giving you the freedom to explore new investment opportunities.
             </p>
         </div>
 
@@ -358,9 +358,9 @@ Today’s apartment buildings range from low-rise suburban buildings to high-ris
             </div>
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+                <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
         </div>
@@ -391,9 +391,9 @@ Today’s apartment buildings range from low-rise suburban buildings to high-ris
         <div class="footer-contact">
             <h3>Contact Us</h3>
             <ul>
-                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+                <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
             </ul>
         </div>
     </div>
@@ -403,7 +403,6 @@ Today’s apartment buildings range from low-rise suburban buildings to high-ris
         <p>&copy; 2024 GIGI Buys Homes. All rights reserved</p>
     </div>
 </footer>
-
 
 
 
