--- a/Condos.html
+++ b/Condos.html
@@ -135,7 +135,7 @@
                 
                     <input type="text" class="form-control" id="address" placeholder="Address" required>
                     <input type="text" class="form-control" id="name" placeholder="Name" required>
-                    <input type="number" class="form-control" id="phone" placeholder="Phone" required>
+                    <input type="tel" pattern="^[1-9]\d*$" class="form-control" id="phone" placeholder="Phone" required oninput="this.value = this.value.replace(/[^0-9]/g, '')">
                     <input type="email" class="form-control" id="email" placeholder="Email" required>
                     <div class="form-check">
                         <input type="checkbox" id="terms" class="form-check-input" required>
@@ -166,7 +166,7 @@
 
     <!-- Process Section -->
     <section class="condo-process-section">
-        <h2 class="section-title">Our Streamlined Process for Selling Your Condo</h2>
+        <h2 class="condos-section-title">Our Streamlined Process for Selling Your Condo</h2>
         <div class="process-steps">
             <div class="step-box">
                 <div class="condos-step-number">1</div>
@@ -188,16 +188,15 @@
 
     <!-- What is a Condo Section -->
     <section class="condo-info-section">
-        <h2 class="section-title">What is a Condo?</h2>
+        <h2 class="condos-section-title">What is a Condo?</h2>
         <div class="info-content">
             <p>A condominium, or condo, is a type of real estate where individual units are privately owned, but shared spaces—like hallways, pools, and recreation areas—are collectively owned by all the condo owners within the complex.</p>
-            <img src="YT Thumbnail.svg" alt="Condo Living" class="condo-image">
         </div>
     </section>
 
     <!-- Appeal Section -->
     <section class="condo-appeal-section">
-        <h2 class="section-title">The Appeal and Flexibility of Condos</h2>
+        <h2 class="appeal-section-title">The Appeal and Flexibility of Condos</h2>
         <div class="appeal-cards">
             <div class="appeal-card">
                 <h3>First-Time Homebuyers</h3>
@@ -333,9 +332,9 @@
             </div>
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+                <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
         </div>
@@ -366,9 +365,9 @@
         <div class="footer-contact">
             <h3>Contact Us</h3>
             <ul>
-                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+                <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
             </ul>
         </div>
     </div>
