--- a/Financial Difficulties.html
+++ b/Financial Difficulties.html
@@ -124,7 +124,7 @@
 <section class="cash-offers-section">
     <div class="cash-offers-container">
         <div class="cash-offers-image">
-            <img src="assests/About Us 2.svg" alt="Cash Offers" />
+            <img src="assests/Why Sell/Financial Difficulties 1.svg" alt="Cash Offers" />
         </div>
         <div class="cash-offers-content">
             <h2 class="cash-offers-title">Cash Offers: A Fast Way to Sell</h2>
@@ -154,7 +154,7 @@
             </p>
         </div>
         <div class="auction-image">
-            <img src="assests/Explore Property 2.svg" alt="Auction" />
+            <img src="assests/Why Sell/Financial Difficulties 2.svg" alt="Auction" />
         </div>
     </div>
 </section>
@@ -163,7 +163,7 @@
 <section class="realtor-section">
     <div class="realtor-container">
         <div class="realtor-image">
-            <img src="assests/Explore Property 2.svg" alt="Finding a Realtor" />
+            <img src="assests/Why Sell/Financial Difficulties 3.svg" alt="Finding a Realtor" />
         </div>
         <div class="realtor-content">
             <h2 class="realtor-title">Finding a Realtor</h2>
@@ -191,7 +191,7 @@
             </p>
         </div>
         <div class="fsbo-image">
-            <img src="assests/Explore Property 1.svg" alt="FSBO" />
+            <img src="assests/Why Sell/Financial Difficulties 4.svg" alt="FSBO" />
         </div>
     </div>
 </section>
@@ -200,7 +200,7 @@
 <section class="pricing-section">
     <div class="pricing-container">
         <div class="pricing-image">
-            <img src="assests/Explore Property 1.svg" alt="Setting the Right Price" />
+            <img src="assests/Why Sell/Financial Difficulties 5.svg" alt="Setting the Right Price" />
         </div>
         <div class="pricing-content">
             <h2 class="pricing-title">Setting the Right Price</h2>
@@ -268,9 +268,9 @@
             </div>
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+                <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
         </div>
@@ -301,9 +301,9 @@
         <div class="footer-contact">
             <h3>Contact Us</h3>
             <ul>
-                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+                <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
             </ul>
         </div>
     </div>
