--- a/Inherited Property.html
+++ b/Inherited Property.html
@@ -131,14 +131,14 @@
                 </p>
             </div>
             <div class="inheritance-custom-image">
-                <img src="assests/About Us 1.svg" alt="Navigating Probate Process">
+                <img src="assests/Why Sell/Inheritated Property 1.svg" alt="Navigating Probate Process">
             </div>
         </div>
 
         <!-- Section 3: Legal Steps Before Selling -->
         <div class="inheritance-custom-legal-steps">
             <div class="inheritance-custom-image">
-                <img src="assests/About Us 1.svg" alt="Legal Steps">
+                <img src="assests/Why Sell/Inheritated Property 2.svg" alt="Legal Steps">
             </div>
             <div class="inheritance-custom-text">
                 <h3 class="inheritance-heading">Legal Steps Before Selling</h3>
@@ -170,7 +170,7 @@
                 </p>
             </div>
             <div class="inheritance-custom-image">
-                <img src="assests/About Us 1.svg" alt="Property Value">
+                <img src="assests/Why Sell/Inheritated Property 3.svg" alt="Property Value">
             </div>
         </div>
 
@@ -179,7 +179,7 @@
         <!-- Section 5: Understanding Taxes -->
         <div class="inheritance-custom-taxes">
             <div class="inheritance-custom-image">
-                <img src="assests/About Us 1.svg" alt="Understanding Taxes">
+                <img src="assests/Why Sell/Inheritated Property 4.svg" alt="Understanding Taxes">
             </div>
             <div class="inheritance-custom-text">
                 <h3 class="inheritance-heading">Understanding Taxes</h3>
@@ -214,7 +214,7 @@
                 </p>
             </div>
             <div class="inheritance-custom-image">
-                <img src="assests/About Us 1.svg" alt="Selling Home">
+                <img src="assests/Why Sell/Inheritated Property 5.svg" alt="Selling Home">
             </div>
         </div>
     </div>
@@ -272,9 +272,9 @@
             </div>
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
-                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+                <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
         </div>
@@ -305,9 +305,9 @@
         <div class="footer-contact">
             <h3>Contact Us</h3>
             <ul>
-                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
-                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+                <!-- <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li> -->
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:homestogigi@gmail.com" style="color: white; text-decoration: none;">homestogigi@gmail.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> (204) 815-3646</li>
             </ul>
         </div>
     </div>
