--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             <div class="about-image-box">
                 <!-- <a href="#" class="about-image-link"> -->
                     <div class="about-image-wrapper">
-                        <img src="assests/About Us Section Image 1.webp" alt="Modern House" class="about-image" />
+                        <img src="assests/About Us Section Image 1.svg" alt="Modern House" class="about-image" />
                         <div class="about-shine-effect"></div>
                     </div>
                 </a>
@@ -520,7 +520,7 @@
             <div class="about-image-box">
                 <!-- <a href="#" class="about-image-link"> -->
                     <div class="about-image-wrapper">
-                        <img src="assests/About Us Section Image 2.webp" alt="Beautiful House" class="about-image" />
+                        <img src="assests/About Us Section Image 2.svg" alt="Beautiful House" class="about-image" />
                         <div class="about-shine-effect"></div>
                     </div>
                 </a>
