--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <header class="hero-section">
     <!-- Social Media Links -->
     <div class="social-media">
-        <a href="#" class="social-link">Instagram</a>
+        <a href="https://www.instagram.com/gigibuyhomes/" class="social-link" target="_blank">Instagram</a>
         <!-- <a href="#" class="social-link">YouTube</a> -->
         <!-- <a href="#" class="social-link">X</a> -->
         <a href="#" class="social-link">Facebook</a>
@@ -628,7 +628,9 @@
             <div class="footer-social-icons">
                 <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
                 <!-- <img src="assests/twitter.svg" alt="Twitter" id="Twitter"> -->
-                <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
+                <a href="https://www.instagram.com/gigibuyhomes/" target="_blank">
+                    <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
+                </a>
                 <!-- <img src="assests/youtube.svg" alt="Youtube" id="Youtube"> -->
             </div>
             
