--- a/Townhouses.html
+++ b/Townhouses.html
@@ -279,8 +279,8 @@
 
     <!-- CTA Section -->
     <section class="townhouse-cta">
-        <h2 class="townhouse-cta-title">The Sell Soon Homes Advantage</h2>
-        <p>Here at Sell Soon Homes, we are dedicated to providing you with a seamless and efficient home-selling experience. Whether you’re looking to sell quickly, avoid repairs, or simply want a stress-free transaction, we are here to help.</p>
+        <h2 class="townhouse-cta-title">The GIGI Buys Homes Advantage</h2>
+        <p>Here at Gigi Buys Homes, we are dedicated to providing you with a seamless and efficient home-selling experience. Whether you’re looking to sell quickly, avoid repairs, or simply want a stress-free transaction, we are here to help.</p>
         <a button type="button" class="cta-button" data-bs-toggle="modal" data-bs-target="#contactFormModal">Learn More About Selling with Us</a>
     </section>
 </div>
