--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
         <!-- Left Section: Text, Title, and Video -->
         <div class="feedback-left">
             <div class="video-thumbnail" onclick="openVerticalVideo()">
-                <img src="YT Thumbnail.svg" alt="Client Testimonial Video">
-                <div class="play-button">&#9658;</div>
+                <img src="YT Thumbnail.jpg" alt="Client Testimonial Video" style="border-radius: 10px;">
+                <!-- <div class="play-button">&#9658;</div> -->
             </div>
         </div>
 
@@ -606,7 +606,7 @@
 <div id="verticalVideoOverlay" class="video-overlay">
     <div class="video-overlay-content">
         <span class="close" onclick="closeVerticalVideo()">&times;</span>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eDqfg_LexCQ" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vBgWJgtcVUg" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 
